# mathquest

./: .gitignore  FILE_STRUCTURE.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
ai_agents/mathquest-questions-agent/: BACKEND_CONTRACT.md  CLAUDE.md  README.md  agent_generator.py  agent_reviewer.py  config.py  debug_pipeline.py  difficulty_adjuster.py  difficulty_engine.py  orchestrator.py  problem_recommender.py  run_test.py  schemas.py  second-agent.md  simulate.py  test_agents.py
ai_agents/story-agent/: CLAUDE.md  config.py  generate_story.py  test_generate_story.py
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  errors.py  main.py  security.py  settings.py  supabase_clients.py
backend/app/models/: __init__.py  user.py
backend/app/routes/: auth.py  child.py  parent.py  problems.py
backend/app/schemas/: auth.py  parent.py  problems.py
backend/tests/: conftest.py  test_auth.py  test_parent.py
docs/: auth-flow.md  problems-flow.md
public/: MathQuest_Terms_of_Play.docx
src/: Middleware.ts  middleware.ts
src/app/: globals.css  layout.tsx  page.tsx
src/types/: game.ts
supabase/: README.md
supabase/migrations/: 0001_create_users.sql  0002_users_display_name_and_hardened_trigger.sql  0003_grant_users_table.sql  0004_create_parent_settings.sql  0005_create_children.sql  0006_parent_deletion_cascade.sql  0007_backfill_parent_settings.sql  0008_add_grade_to_children.sql  0009_create_tricks.sql  0010_create_problems.sql  0011_create_sessions.sql  0012_create_trick_discoveries.sql  (+5 more)
(+34 files in other folders)
